--- a/kubernetes/apps/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/external.yaml
@@ -6,6 +6,8 @@ metadata:
   name: external
   annotations:
     external-dns.alpha.kubernetes.io/target: &hostname external.igloo.sh
+    gatus.home-operations.com/endpoint: |-
+      group: external
 spec:
   gatewayClassName: cilium
   addresses:
