--- a/kubernetes/apps/default/manyfold/app/helmrelease.yaml
+++ b/kubernetes/apps/default/manyfold/app/helmrelease.yaml
@@ -116,6 +116,9 @@ spec:
             port: 6379
     route:
       app:
+        annotations:
+          gatus.home-operations.com/endpoint: |-
+            group: external
         hostnames: ["{{ .Release.Name }}.igloo.sh"]
         parentRefs:
           - name: external
