--- a/kubernetes/apps/servarr/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/jellyseerr/app/helmrelease.yaml
@@ -72,6 +72,7 @@ spec:
         annotations:
           gatus.home-operations.com/endpoint: |-
             conditions: ["[STATUS] == 200"]
+            group: external
         hostnames:
           - "{{ .Release.Name }}.igloo.sh"
           - requests.igloo.sh
