--- a/kubernetes/apps/default/home-assistant/app/helm/values.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helm/values.yaml
@@ -43,6 +43,7 @@ route:
       gatus.home-operations.com/endpoint: |-
         conditions: ["[STATUS] == 200"]
         group: external
+        url: hass.igloo.sh
     hostnames:
       - "{{ .Release.Name }}.igloo.sh"
       - hass.igloo.sh
