fix(gatus): more annotation edits

--- a/kubernetes/apps/default/n8n/app/helmrelease.yaml
+++ b/kubernetes/apps/default/n8n/app/helmrelease.yaml
@@ -76,6 +76,7 @@ spec:
       webhooks:
         annotations:
           gatus.home-operations.com/endpoint: |-
+            conditions: ["[STATUS] == 404"]
             group: external
         hostnames:
           - n8n-webhook.igloo.sh
