--- a/kubernetes/apps/servarr/autobrr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/autobrr/app/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
               requests:
                 cpu: 10m
               limits:
-                memory: 256Mi
+                memory: 1Gi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
