config(talos): auto negotiate nfsvers
- NFSv3 supports up to 8 nconnect
- keep locks local

--- a/talos/patches/global/machine-files.yaml
+++ b/talos/patches/global/machine-files.yaml
@@ -13,7 +13,8 @@ machine:
       permissions: 0o644
       content: |
         [ NFSMount_Global_Options ]
-        nfsvers=4.2
+        # nfsvers=4.2
         hard=True
-        nconnect=16
+        lock=False
+        nconnect=8
         noatime=True
