--- a/kubernetes/apps/servarr/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/qbittorrent/app/helmrelease.yaml
@@ -183,10 +183,10 @@ spec:
               - path: /etc/coredns/Corefile
                 subPath: Corefile
                 readOnly: true
-      qbrr:
-        type: image
-        image: ghcr.io/buroa/qbrr:0.1.2@sha256:f930dbb4de49ffe3348d1d4f8187ce27590842bc4d6a89c3aa84234d7e99f46b
-        globalMounts:
-          - readOnly: true
+      # qbrr:
+      #   type: image
+      #   image: ghcr.io/buroa/qbrr:0.1.2@sha256:f930dbb4de49ffe3348d1d4f8187ce27590842bc4d6a89c3aa84234d7e99f46b
+      #   globalMounts:
+      #     - readOnly: true
       tmp:
         type: emptyDir
