--- a/kubernetes/apps/servarr/kustomization.yaml
+++ b/kubernetes/apps/servarr/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - ./jellyseerr/ks.yaml
   - ./prowlarr/ks.yaml
   - ./qbittorrent/ks.yaml
+  - ./qui/ks.yaml
   - ./radarr/ks.yaml
   - ./recyclarr/ks.yaml
   - ./sabnzbd/ks.yaml
