--- a/kubernetes/apps/servarr/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/recyclarr/app/helmrelease.yaml
@@ -65,14 +65,5 @@ spec:
           - path: /config/recyclarr.yaml
             subPath: recyclarr.yaml
             readOnly: true
-      tmpfs:
+      tmp:
         type: emptyDir
-        advancedMounts:
-          recyclarr:
-            app:
-              - path: /config/logs
-                subPath: logs
-              - path: /config/repositories
-                subPath: repositories
-              - path: /tmp
-                subPath: tmp
