chore(sonarr): move sonarr scripts

--- a/kubernetes/apps/servarr/sonarr/app/kustomization.yaml
+++ b/kubernetes/apps/servarr/sonarr/app/kustomization.yaml
@@ -7,6 +7,10 @@ resources:
   - ./helmrelease.yaml
   - ./pvc.yaml
 configMapGenerator:
+  - name: sonarr-configmap
+    files:
+      - refresh-series.sh=./resources/refresh-series.sh
+      - tag-codecs.sh=./resources/tag-codecs.sh
   - name: sonarr-loki-rules
     files:
       - sonarr.yaml=./lokirule.yaml
