feat: use shortlived LE certificates

--- a/kubernetes/apps/kube-system/cilium/gateway/certificate.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/certificate.yaml
@@ -5,11 +5,18 @@ kind: Certificate
 metadata:
   name: "${SECRET_DOMAIN/./-}-production"
 spec:
-  secretName: "${SECRET_DOMAIN/./-}-production-tls"
-  issuerRef:
-    name: letsencrypt-production
-    kind: ClusterIssuer
   commonName: "${SECRET_DOMAIN}"
   dnsNames:
     - "${SECRET_DOMAIN}"
     - "*.${SECRET_DOMAIN}"
+  duration: 160h
+  issuerRef:
+    kind: ClusterIssuer
+    name: letsencrypt-production
+  privateKey:
+    algorithm: ECDSA
+    size: 256
+    rotationPolicy: Always
+  secretName: "${SECRET_DOMAIN/./-}-production-tls"
+  usages:
+    - digital signature
