--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -56,7 +56,8 @@ l2announcements:
 loadBalancer:
   algorithm: maglev
   mode: "dsr"
-localRedirectPolicy: true
+localRedirectPolicies:
+  enabled: true
 operator:
   dashboards:
     enabled: true
